(Issue 3392) Wrap action controls under display name of manage access items

--- a/shared/oae/css/oae.base.css
+++ b/shared/oae/css/oae.base.css
@@ -229,6 +229,10 @@ input[type="color"],
     padding: 6px;
 }
 
+select.form-control {
+    padding: 4px;
+}
+
 .form-horizontal input + .help-block,
 .form-horizontal select + .help-block,
 .form-horizontal textarea + .help-block,
